--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ codeMyster
   
   var API_KEY = '7a21d3f1b4ca6be3df681909a6df4b46'
   
-  var url = 'http://api.serpstack.com/search?access_key=' + API_KEY + '&type=web&query=' + query
+  var url = 'https://api.serpstack.com/search?access_key=' + API_KEY + '&type=web&query=' + query
     
     $.get(url,function(data){
         console.log(data);
