--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ codeMyster
   
   var API_KEY = '6dd8354938816f7a84eff488357375ab'
   
-  var url = 'https://api.serpstack.com/search?access_key=' + API_KEY + '&type=web&query=' + query
+  var url = 'http://api.serpstack.com/search?access_key=' + API_KEY + '&type=web&query=' + query
     
     $.get(url,function(data){
         console.log(data);
